--- a/mean-p1/src/app/app.component.html
+++ b/mean-p1/src/app/app.component.html
@@ -1,4 +1,6 @@
 
 <app-header></app-header>
-<app-post-create></app-post-create>
-<app-post-list></app-post-list>
+<main>
+ <router-outlet></router-outlet>
+</main>
+
