--- a/mean-p1/src/app/header/header.component.html
+++ b/mean-p1/src/app/header/header.component.html
@@ -1,1 +1,9 @@
-<mat-toolbar color='primary'>My msgs</mat-toolbar>
+<mat-toolbar color='primary'>
+  <span><a mat-button routerLink='./' outerLinkActive="mat-accent">My Posts</a></span>
+  <span class="spacer"></span>
+  <ul>
+    <li>
+      <a mat-button routerLink='./create' routerLinkActive="mat-accent">New Post</a>
+    </li>
+  </ul>
+</mat-toolbar>
